[package]
name = "vibesnap"
version = "1.0.0"
edition = "2024"
description = "Snapshot-style version control for AI-first coding"
readme = "README.md"
repository = "https://github.com/kirillleventcov/vibesnap"
license = "MIT"
keywords = ["version-control", "snapshot", "checkpoint", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vibesnap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.26"
sha2 = "0.10.6"
hex = "0.4.3"
colored = "3.0.0"
thiserror = "2.0.12"
walkdir = "2.4.0"
comfy-table = "7.0.1"
diff = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.7"
dirs = "6.0"
dialoguer = "0.12.0"
indicatif = "0.18.0"
console = "0.16.1"
similar = "2.3"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
glob = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
